# gc_crash_test_app

./: .gitignore  settings.gradle  test.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gc_crash_test.cpp
app/src/main/java/com/test/gccrash/: MainActivity.java
